deploy/k8s/jellyfish/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: jellyfish
  namespace: jellyfish
spec:
  selector:
    matchLabels:
      app: jellyfish
  replicas: 1 # we need to make some application fixes, before we can increase this
  template:
    metadata:
      labels:
        app: jellyfish
    spec:
      containers:
      - image: balena/jellyfish:master # We need to add a version tag here
        name: jellyfish
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: jellyfish-api
      imagePullSecrets:
        - name: com.docker.hub.travisciresin
